MNT-22601 Fix Admin Console cookie list (#134)